Fix logo alignment, add new files

--- a/resources/sass/components/_2_draggable-img-gallery.scss
+++ b/resources/sass/components/_2_draggable-img-gallery.scss
@@ -19,7 +19,7 @@ Usage: codyhouse.co/license
         }
 
         @include breakpoint(md) {
-            --drag-gallery-img-width: 390px;
+            --drag-gallery-img-width: 400px;
         }
     }
 }
